
[ CORE. Support for Service Tree ] 
[ CORE. Check permission system ]
[ CORE. Support of monitoring of log files ]
[ CORE. Special item which will reflect availability of server ]

[ DOCS. SNMP with missing MIB files can be used by:
snmpget -On localhost public enterprises.ucdavis.memory.memTotalSwap.0]

[ PHP. Navigation by time period for graphs and trends ]

Changes for 1.0beta4:

 - check permissions for Availability report (Alexei)
 - added parameter SenderFrequency to zabbix_suckerd configuration 
 file (Alexei)
 - added frontends/include/defines.inc.php (Alexei)
 - added column services.algorithm (Alexei)
 - list of test cases added to the Manual (Alexei)
 - emails to be sent in case of TRUE-UNKNOWN-FALSE and v.s. (Alexei)
 - one zabbix_suckerd to send alerts (Alexei)
 - minimum number of zabbix_suckers StartSuckers is set to 3 (Alexei)
 - added alerts.retries (Alexei)
 - added alerts.status (Alexei)
 - status of triggers changes if host/item status has been changed (Alexei)
 - status of triggers is set correctly even if zabbix is restarted (Alexei)
 - php/include/*inc renamed to php/include/*inc.php (Alexei)
 - check of source IP address for trapped values (Alexei)
 - added include/security.h and include/security.c (Alexei)
 - added items.trapper_hosts (Alexei)
 - housekeeping period for items to be set in days (Alexei)
 - authorisation without user name/password (Alexei)
 - default user "guest" (Alexei)
 - added table 'sessions' (Alexei)
 - added index triggers.value and trigger.status (Alexei)
 - added column alarms.value (Alexei)
 - removed column alarms.istrue (Alexei)
 - added columns triggers.status (Alexei)
 - added columns triggers.value (Alexei)
 - removed column triggers.istrue (Alexei)
 - support for --enable-static for ./configure (Alexei)
 - housekeeping period for alarms and alerts to be set in days (Alexei)
 - created directory upgrades/dbpatches/1.0beta3_to_1.0beta4 (Alexei)