@@ -19,6 +19,7 @@ snmpget -On localhost public enterprises.ucdavis.memory.memTotalSwap.0]
 
 Changes for 1.0beta4:
 
+ - added Next100 and Prev100 for alerts and alarms (Alexei)
  - check permissions for Availability report (Alexei)
  - added parameter SenderFrequency to zabbix_suckerd configuration 
  file (Alexei)
